# misc-projects

./: .gitignore  README.md
c++/: guard.cpp  leetcode-longest-palindromic-substring.cpp  leetcode-remove-element.cpp  ops-ctors-dtors-cheatsheet.cpp  producer-consumer.cpp  rotate-array.cpp
c++/odr-violation/: main.cpp  object.cpp  shared.cpp
cmake/00-file-globing/: CMakeLists.txt  README.md  main.cpp
cmake/01-map-file-generation/: CMakeLists.txt  README.md  main.cpp  mylib0.cpp  mylib1.cpp
cmake/02-find-python/: CMakeLists.txt
cmake/03-custom-command/: CMakeLists.txt  main.cpp.in  script.py
cmake/04-bool-option/: CMakeLists.txt
cmake/05-qt6-qmllint-ctest/: CMakeLists.txt  main.qml
docs/: coding-standards-101-sutter-alexandrescu.md
felgo/01-rain/: Main.qml
felgo/02-blind-match/: Scene.qml  main-desktop.qml  main.qml
felgo/02-blind-match/components/: Board.qml  Card.qml
felgo/04-moon-shooter/: main-qmlscene.qml  main.qml
felgo/04-moon-shooter/comps/: Moon.qml  MoonAdvancer.qml  Projectile.qml  ProjectileAdvancer.qml  Scene.qml
godot/01-tictactoe/: 01-main.gd  02-board.gd  02-display_cell_control.gd  03-display_cell_control.gd  display-glare.svg.import  display.svg.import  export_presets.cfg  free-cell-click.mp3.import  game-over.mp3.import  green-frame.svg.import  icon-o-idle.svg.import  icon-x-idle.svg.import  icon.svg.import  project.godot  red-frame.svg.import
godot/01-tictactoe/scenes/: 01-EEC.tmp  01-main.tscn  02-4358.tmp  02-board.tscn  02-display_cell_control.tscn  03-display_cell_control.tscn
py/01-90-in-180-days-stay/: main.py  test.json
py/classifier/: classify.py  main.py  main1.py  requirements.txt  train.py
qml/: plotter.qml
qml/01-named-params-sortof/: main.qml
qml/02-spider-web/: Line.qml  main.qml
qml/03-rain/: rain.qml
qml/05-timer-vs-animation/: main.qml
qml/drawing-canvas/: main.qml
qml/spider-web/: Web.qml
qt/classifier/: CMakeLists.txt
qt/classifier/qml/: DigitSelector.qml  DrawingArea.qml  classify.qml  main.qml  res.qrc  test.qml
qt/classifier/src/: classifier.cpp  classifier.h  main.cpp
qt/how-to-qpointer/: build.pro  main.cpp
qt/metatype-dtor-crash/: CMakeLists.txt  main.cpp  output.txt  types.h
